New: Confirmation for searching all/filtered movies

--- a/src/NzbDrone.Core/Localization/Core/en.json
+++ b/src/NzbDrone.Core/Localization/Core/en.json
@@ -1058,9 +1058,11 @@
   "ScrollMovies": "Scroll Movies",
   "Search": "Search",
   "SearchAll": "Search All",
+  "SearchAllMoviesConfirmationMessageText": "Are you sure you want to run search for all movies?",
   "SearchCutoffUnmet": "Search Cutoff Unmet",
   "SearchFailedPleaseTryAgainLater": "Search failed, please try again later.",
   "SearchFiltered": "Search Filtered",
+  "SearchFilteredMoviesConfirmationMessageText": "Are you sure you want to run search for the filtered movies?",
   "SearchForMissing": "Search for Missing",
   "SearchForMovie": "Search for movie",
   "SearchMissing": "Search Missing",
@@ -1069,6 +1071,7 @@
   "SearchOnAddCollectionHelpText": "Search for movies on this collection when added to library",
   "SearchOnAddHelpText": "Search for movies on this list when added to library",
   "SearchSelected": "Search Selected",
+  "SearchSelectedMoviesConfirmationMessageText": "Are you sure you want to run search for {count} movie(s)?",
   "Seconds": "Seconds",
   "Security": "Security",
   "Seeders": "Seeders",
